force-app/main/default/objects/AccountBrandAssignment__c/AccountBrandAssignment__c.object-meta.xml
<CustomObject>
    <label>Account Brand Assignment</label>
    <nameField>
        <displayFormat>ABA-{0000000}</displayFormat>
        <label>Account Brand Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Brand Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>