force-app/main/default/objects/AccountBrandAssignment__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Brand has to be Assortment Extension Enabled.</errorMessage>
        <filterItems>
            <field>WebshopBrand__c.AssortmentExtensionEnabled__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>WebshopBrand__c</referenceTo>
    <relationshipLabel>Account Brand Assignments</relationshipLabel>
    <relationshipName>AccountBrandAssignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>